Добавил правила ассистента

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ Pods/
 !*.xcodeproj/project.xcworkspace/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
+rules.toml
